# FreakyNetworking

./: .gitignore  README.md
hw/: ATWILC1000_Breakout.kicad_pcb  ATWILC1000_Breakout.kicad_pro  ATWILC1000_Breakout.kicad_sch  fp-lib-table  sym-lib-table  troll.kicad_mod
hw/LIB_ATWILC1000-MR110PB-T/: ATWILC1000-MR110PB-T.dcm  ATWILC1000-MR110PB-T.kicad_sym  ATWILC1000-MR110PB-T.lib  ATWILC1000-MR110PB-T.mod  ATWILC1000-MR110PB-T.stp  ATWILC1000MR110PBT.kicad_mod
hw/bom/: ibom.html
hw/production/: ATWILC1000_Breakout-B_Cu.gbl  ATWILC1000_Breakout-B_Mask.gbs  ATWILC1000_Breakout-B_Paste.gbp  ATWILC1000_Breakout-B_Silkscreen.gbo  ATWILC1000_Breakout-Edge_Cuts.gm1  ATWILC1000_Breakout-F_Cu.gtl  ATWILC1000_Breakout-F_Mask.gts  ATWILC1000_Breakout-F_Paste.gtp  ATWILC1000_Breakout-F_Silkscreen.gto  ATWILC1000_Breakout-NPTH-drl_map.gbr  ATWILC1000_Breakout-NPTH.drl  ATWILC1000_Breakout-PTH-drl_map.gbr  ATWILC1000_Breakout-PTH.drl  netlist.ipc
sw/: CMakeLists.txt  Makefile  dump  log.tx  log.txt  logfile  mac.txt  monitor.sh  run.sh  todo.txt
sw/FreakyRTOS/: ADC.c  CMakeLists.txt  FIFO.h  Interpreter.c  Interpreter.h  OS.c  OS.h  SVC_Test_gcc.s  eDisk.c  osasm.s
sw/driverlib/: CMakeLists.txt  cpu.c  interrupt.c  ssi.c  ssi.h  sysctl.c  sysctl.h  udma.c
sw/gcc-files/: compile_asm.sh  help.txt  startup_gcc.c  syscalls.c  tm4c123gh6pm.ld.exception  tm4c123gh6pm.ld.og
sw/gcc-files/template/: src.txt
sw/inc/: ADCSWTrigger.c  CMakeLists.txt  CortexM.c  Dump.c  Dump.h  InputCapture.c  LaunchPad.c  SSD1306.h  ST7735.c  ST7735.h  Timer1A.c  Timer4A.c  Timer4A.h  UART.c  UART.h  UART0int.c
sw/lib/std/nanoprintf/: nanoprintf.h  printf.h  wrapper_nanoprintf.c
sw/lib/std/stdio_lite/: CMakeLists.txt  stdio_lite.c  stdio_lite.h
sw/lib/std/string_lite/: CMakeLists.txt  string_lite.c  string_lite.h
sw/src/: DHCP.c  DHCP.h  ICMP.c  ICMP.h  Networking.c  Networking.h  Networking_Globs.c  Networking_Globs.h  SensorIn.c  SensorIn.h  UDP.c  UDP.h  arp.c  arp.h  dhcp_client.c  dhcp_client.h  internet_checksum.c  internet_checksum.h  ip.c  ip.h  mac.c  mac.h  main.c  main.h  ping.c  ping.h  userApp_udp.c  userApp_udp.h
sw/testingProtocol/: dummy.py  echoreq.py  main.c  stubs.c  stubs.h
sw/wilc/bsp/include/: nm_bsp.h
sw/wilc/bsp/source/: nm_bsp_tm4c.c
sw/wilc/bus_wrapper/source/: nm_bus_wrapper_tm4c.c
sw/wilc/common/include/: nm_common.h
sw/wilc/driver/include/: m2m_wifi.h
sw/wilc/driver/source/: m2m_hif.c  m2m_wifi.c  nmasic.c  nmdrv.c  nmspi.c
sw/wilc/wilc1000_module_config/tm4c/: conf_wilc.h
